# TSCompiler

./: .gitignore  CMakeLists.txt  TODO.txt  TSCompiler  TSCompiler.pro  use_cmake_with_qtcreator.bat
CoCo/: Coco  Coco.atg  Coco.cpp  Generator.cpp  Generator.h  Parser.cpp  Parser.h  ParserGen.cpp  ParserGen.h  Scanner.cpp  Scanner.h  Tab.cpp
CoCo/Coco.dSYM/Contents/: Info.plist
CoCo/Coco.dSYM/Contents/Resources/DWARF/: Coco
doc/: TrivialScript_draft.markdown  TrivialScript_grammar.markdown
src/: CMakeLists.txt  DFA.cpp  Makefile  Parser.cpp  Parser.cpp.old  Parser.frame  Parser.h  Parser.h.old  Scanner.cpp  Scanner.cpp.old  Scanner.frame  Scanner.h  Scanner.h.old  TSCompiler.atg  Taste.cpp  a.out  apdugenerator.cpp  apdugenerator.h  apduviewer.cpp  apduviewer.h  main.cpp  opcodetable.cpp  opcodetable.h  tscommunicator.cpp  tscommunicator.h  tsdata.cpp  tsdata.h  tsfunction.cpp  tsfunction.h  tsobject.cpp  tsobject.h
test/: test.ts
